syntax = "proto3";

import "EmployeeApplication.proto";
import "OrganisationApplication.proto";
import "OrganizationBase.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "org.myddd.extensions.organization.api";
option java_outer_classname = "PermissionGroupApplicationProto";
package org.myddd.extensions.organization.api;

service PermissionGroupApplication {
    /**
     * 请求创建一个权限组
     */
    rpc CreatePermissionGroup(PermissionGroupDto) returns (PermissionGroupDto);
    /**
     * 根据权限组ID，查询一个权限组
     */
    rpc QueryPermissionGroup(google.protobuf.Int64Value) returns (PermissionGroupDto);
    /**
     * 更新一个权限组
     */
    rpc UpdatePermissionGroup(PermissionGroupDto) returns (PermissionGroupDto);
    /**
     * 查询出关联的权限组列表
     */
    rpc ListQueryPermissionGroups(ListQueryPermissionGroupDto) returns (ListPermissionGroupDto);
    /**
     * 请求删除一个权限组，须指定权限组ID以及关联ID
     */
    rpc DeletePermissionGroup(RemovePermissionGroupDto) returns (google.protobuf.BoolValue);

    /**
     * 查询一个雇员在特定权限组关联集中拥有哪些权限组
     */
    rpc QueryEmployeePermissionGroups(QueryEmployeePermissionGroupDto) returns (ListPermissionGroupDto);

    /**
     * 检查雇员是否在特定的权限组中
     */
    rpc CheckEmployeeInPermissionGroup(EmployeeInPermissionGroupDto) returns (google.protobuf.BoolValue);
}


message EmployeeInPermissionGroupDto {
    int64 employee_id = 1;
    int64 permission_id = 2;
}

/**
 * 查询一个雇员在特定权限组关联集中拥有哪些权限组
 */
message QueryEmployeePermissionGroupDto {
    int64 employee_id = 1;
    PermissionGroupTypeDto type = 2 ;
    string relate_id = 3;
}

/**
 * 请求删除一个权限组的dto
 */
message RemovePermissionGroupDto{
    string relate_id = 1;
    int64  permission_group_id = 2;
}

/**
 * 请求查询一个权限组的dto
 */
message ListQueryPermissionGroupDto {
    PermissionGroupTypeDto type = 1 ;
    string relate_id = 2;
}

/**
 * 代表权限组LIST
 */
message ListPermissionGroupDto {
    repeated PermissionGroupDto permission_groups = 1;
}

/**
 * 关联的类型，FORM--表单，APP--APP
 */
enum PermissionGroupTypeDto {
    PERMISSION_GROUP_TYPE_FORM = 0;
    PERMISSION_GROUP_TYPE_APP = 1;
}

/**
 * 权限组dto
 */
message PermissionGroupDto {
    int64 id = 1;
    repeated OrgRoleDto org_roles = 2;
    repeated organization.api.EmployeeDto employees = 3;
    repeated organization.api.OrganizationDto organizations = 4;
    PermissionGroupTypeDto type = 5 ;
    string relate_id = 6;
}
